# ToneBridgeDemo

./: .gitignore  .replit  README-REPLIT.md  README.md  check.sh  clean.sh  clean_project.sh  install-replit.sh  install.bat  install.sh  models.py  package-lock.json  package.json  pyproject.toml  replit.md  requirements.txt  run.bat  run.sh
attached_assets/: Pasted--Google-Analytics-ID-G-56D78RCESE-audio-analysis-js-v-1756279600-1-ToneBridge-audio-a-1757219667219_1757219667220.txt  Pasted--Google-Analytics-ID-G-56D78RCESE-audio-analysis-js-v-1756279600-1-ToneBridge-audio-a-1757224364706_1757224364707.txt  Pasted--Starting-ToneBridge-backend-with-Pure-Nix-environment-Cleared-contaminating-environment-var-1757560634324_1757560634325.txt  Pasted--TextGrid-Executed-rg-C-2-n-1757422767348_1757422767349.txt  Pasted--TextGrid-TextGrid--1757352537693_1757352537694.txt  Pasted--ToneBridge-Backend-Service-10-Console-js-61-Google-Analytics-ID-G-5-1757251534159_1757251534160.txt  Pasted--ToneBridge-Backend-Service-10-Console-js-61-Google-Analytics-ID-G-5-1757298162261_1757298162262.txt  Pasted--ToneBridge-Backend-Service-10-Console-js-61-Google-Analytics-ID-G-5-1757298492301_1757298492301.txt  Pasted--ToneBridge-Backend-Service-10-Console-js-61-Google-Analytics-ID-G-5-1757299071248_1757299071248.txt  Pasted--ToneBridge-Backend-Service-10-Console-js-61-Google-Analytics-ID-G-5-1757299657125_1757299657126.txt  Pasted--ToneBridge-Backend-Service-10-Console-js-61-Google-Analytics-ID-G-5-1757344882391_1757344882392.txt  Pasted--ToneBridge-Voice-Analysis--1757473540872_1757473540872.txt  (+17 more)
(+135 files in other folders)
