[tool.poetry]
name = "tonebridge"
version = "0.1.0"
description = ""
authors = ["Your Name"]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.104.1"
uvicorn = {extras = ["standard"], version = "^0.24.0"}
numpy = "^1.24.3"
librosa = "^0.10.1"
soundfile = "^0.12.1"
pydub = "^0.25.1"
scipy = "^1.16.1"
praat-parselmouth = "^0.4.6"
textgrid = "^1.6.1"
python-multipart = "^0.0.20"
python-dotenv = "^1.1.1"
sqlalchemy = "^2.0.43"
jinja2 = "^3.1.6"
noisereduce = "^3.0.3"
webrtcvad = "^2.0.10"
audioread = "^3.0.1"
jamo = "^0.4.1"
konlpy = "^0.6.0"
python-levenshtein = "^0.27.1"
rapidfuzz = "^3.14.1"
psycopg2-binary = "^2.9.10"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
